cmake_minimum_required(VERSION 3.27.0)
project(CCVRP VERSION 0.1.0)

# 为当前路径以及子目录的源文件加入由-D预编译定义
IF (CMAKE_BUILD_TYPE STREQUAL Debug)
    ADD_DEFINITIONS(-DDEBUG)
ENDIF()

# 设置C++编译参数(CMAKE_CXX_FLAGS是全局变量)
set(CMAKE_CXX_FLAGS "-Wall -std=gnu++23")

# 设置指定的C++编译器版本是必须的，如果不设置，或者为OFF，则指定版本不可用时，会使用上一版本。
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 指定为C++23 版本
# set(CMAKE_CXX_STANDARD 23)

#编译选项
set(CMAKE_CXX_FLAGS_Debug "${CMAKE_CXX_FLAGS} -DDEBUG -O0 -g")
set(CMAKE_CXX_FLAGS_Release "${CMAKE_CXX_FLAGS} -O3")

#头文件目录
#include_directories()

# 添加子目录
#add_subdirectory()

#源文件目录
#aux_source_directory(. DIR_SRCS)

#plot绘图库
find_library(PLOTLIB plotLib PATHS ${CMAKE_BINARY_DIR}/plotlib NO_DEFAULT_PATH)
if(PLOTLIB)
	ADD_DEFINITIONS(-DPLOT)
	set(PLOTLIB ${CMAKE_BINARY_DIR}/plotlib)
	add_library(plotlib SHARED IMPORTED)
	set_target_properties(plotlib PROPERTIES IMPORTED_LOCATION PLOTLIB/plotlib)
endif()


# 分别设置Debug和Release输出目录
set(CMAKE_LIBRATY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
set(CMAKE_LIBRATY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/bin)

# 指定生成目标 
#add_executable(vrp ${DIR_SRCS})
add_executable(vrp main.cpp operator.cpp solution.cpp NSearch.cpp heuristic.cpp)

if(PLOTLIB)
	target_include_directories(vrp PUBLIC PLOTLIB)
	target_link_libraries(vrp PUBLIC plotlib)
endif()

# 测试
enable_testing()
add_test(NAME A01 COMMAND vrp a/A-n32-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A02 COMMAND vrp a/A-n33-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A03 COMMAND vrp a/A-n33-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A04 COMMAND vrp a/A-n34-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A05 COMMAND vrp a/A-n36-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A06 COMMAND vrp a/A-n37-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A07 COMMAND vrp a/A-n37-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A08 COMMAND vrp a/A-n38-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A09 COMMAND vrp a/A-n39-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A10 COMMAND vrp a/A-n39-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A11 COMMAND vrp a/A-n44-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A12 COMMAND vrp a/A-n45-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A13 COMMAND vrp a/A-n45-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A14 COMMAND vrp a/A-n46-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A15 COMMAND vrp a/A-n48-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A16 COMMAND vrp a/A-n53-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A17 COMMAND vrp a/A-n54-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A18 COMMAND vrp a/A-n55-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A19 COMMAND vrp a/A-n60-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A20 COMMAND vrp a/A-n61-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A21 COMMAND vrp a/A-n62-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A22 COMMAND vrp a/A-n63-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A23 COMMAND vrp a/A-n63-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A24 COMMAND vrp a/A-n64-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A25 COMMAND vrp a/A-n65-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A26 COMMAND vrp a/A-n69-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME A27 COMMAND vrp a/A-n80-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)

add_test(NAME B01 COMMAND vrp b/B-n31-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B02 COMMAND vrp b/B-n34-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B03 COMMAND vrp b/B-n35-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B04 COMMAND vrp b/B-n38-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B05 COMMAND vrp b/B-n39-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B06 COMMAND vrp b/B-n41-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B07 COMMAND vrp b/B-n43-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B08 COMMAND vrp b/B-n44-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B09 COMMAND vrp b/B-n45-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B10 COMMAND vrp b/B-n45-k6.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B11 COMMAND vrp b/B-n50-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B12 COMMAND vrp b/B-n50-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B13 COMMAND vrp b/B-n51-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B14 COMMAND vrp b/B-n52-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B15 COMMAND vrp b/B-n56-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B16 COMMAND vrp b/B-n57-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B17 COMMAND vrp b/B-n57-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B18 COMMAND vrp b/B-n63-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B19 COMMAND vrp b/B-n64-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B20 COMMAND vrp b/B-n66-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B21 COMMAND vrp b/B-n67-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME B22 COMMAND vrp b/B-n68-k9.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
#add_test(NAME B23 COMMAND vrp b/B-n78-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)

add_test(NAME E01 COMMAND vrp e/E-n22-k4.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E02 COMMAND vrp e/E-n23-k3.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E03 COMMAND vrp e/E-n30-k3.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
#add_test(NAME E04 COMMAND vrp e/E-n30-k4.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E05 COMMAND vrp e/E-n33-k4.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E06 COMMAND vrp e/E-n51-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E07 COMMAND vrp e/E-n76-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E08 COMMAND vrp e/E-n76-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E09 COMMAND vrp e/E-n76-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E10 COMMAND vrp e/E-n76-k14.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
#add_test(NAME E11 COMMAND vrp e/E-n76-k15.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E12 COMMAND vrp e/E-n101-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME E13 COMMAND vrp e/E-n101-k14.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)

add_test(NAME P01 COMMAND vrp p/P-n16-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P02 COMMAND vrp p/P-n19-k2.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P03 COMMAND vrp p/P-n20-k2.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P04 COMMAND vrp p/P-n21-k2.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
#add_test(NAME P05 COMMAND vrp p/P-n22-k2.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P06 COMMAND vrp p/P-n22-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P07 COMMAND vrp p/P-n23-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P08 COMMAND vrp p/P-n40-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P09 COMMAND vrp p/P-n45-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P10 COMMAND vrp p/P-n50-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P11 COMMAND vrp p/P-n50-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P12 COMMAND vrp p/P-n50-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P13 COMMAND vrp p/P-n51-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P14 COMMAND vrp p/P-n55-k7.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P15 COMMAND vrp p/P-n55-k8.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P16 COMMAND vrp p/P-n55-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
#add_test(NAME P17 COMMAND vrp p/P-n55-k15.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P18 COMMAND vrp p/P-n60-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P19 COMMAND vrp p/P-n60-k15.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P20 COMMAND vrp p/P-n65-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P21 COMMAND vrp p/P-n70-k10.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P22 COMMAND vrp p/P-n76-k4.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P23 COMMAND vrp p/P-n76-k5.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)
add_test(NAME P24 COMMAND vrp p/P-n101-k4.vrp 10 CONFIGURATIONS Release WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/Testing)

#set_tests_properties(p01 PROPERTIES PASS_CONFIGURE "0")